# video_editing_agent

./: .env.example  .gitignore  CODE_WALKTHROUGH.md  README.md  agent.py  editor.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sound_extract  tracing.py  transcribe.py  validators.py  viewer.py  vision.py
.github/workflows/: ci.yml
evals/: README.md  checks.py  runner.py  scripted_client.py
evals/cases/: 01_filler_removal.json  02_goal_validation_loop.json
tests/: conftest.py  test_scripted_client.py  test_validators.py  test_vision_parsing.py
